--- a/shortcut/常用快捷键.md
+++ b/shortcut/常用快捷键.md
@@ -5,9 +5,16 @@
 ## Goland常用快捷键
 
 ```shell
+# 默认模式
 CTRL+N  # 查找类
 CTRL+ALT ←/→  # 返回上次编辑的位置
 CTRL+ALT+B  # 找所有的子类
-CTRL+SHIFT+F  # 在指定窗口查找文本,可能和搜狗输入法冲突
+CTRL+SHIFT+F  # 全局搜索,可能和搜狗输入法冲突
+CTRL+G # 跳到指定行
+
+# eclipse模式
+CTRL+L # 跳到指定行
+CTRL+T # 找所有的子类
+CTRL+H  # 全局搜索
 ```
 
