--- a/startlight/星光框架.md
+++ b/startlight/星光框架.md
@@ -81,3 +81,33 @@ func (s Service) Start() {
 }
 ```
 
+ Start()时，进行以下步骤：
+
+1. 初始化
+
+初始化的代码如下了：
+
+```go
+func (s Service) initService() {
+	var err error
+	conf.Service = s.Name
+	if s.Name != "storage_client" {
+		err = conf.InitConf()
+		if err != nil {
+			log.Fatalln(err)
+		}
+	}
+	// 执行额外的初始化操作
+	for _, init := range s.Init {
+		err = init()
+		if err != nil {
+			log.Fatalln(err)
+		}
+	}
+}
+```
+
+conf.InitConf()初始化了服务的ip和端口。接下来便执行额外的初始化操作。
+
+
+
