--- a/linux/常用服务搭建.md
+++ b/linux/常用服务搭建.md
@@ -20,3 +20,48 @@ systemctl enable nfs
 # 注意客户端也需要安装nfs工具：yum install -y nfs-utils
 ```
 
+
+
+CentOS Mysql服务器
+
+```shell
+# CentOS 7.6
+yum -y install mariadb mariadb-server.x86_64
+sed -i '/\[mysqld\]/abind-address = 0.0.0.0'  /etc/my.cnf
+sed -i '/\[mysqld\]/abinlog-format = 'ROW''  /etc/my.cnf
+sed -i '/\[mysqld\]/alog-bin=mysql-bin'  /etc/my.cnf
+sed -i '/\[mysqld\]/amax_connections=700'  /etc/my.cnf
+sed -i '/\[mysqld\]/ainnodb_lock_wait_timeout=600'  /etc/my.cnf
+sed -i '/\[mysqld\]/ainnodb_rollback_on_timeout=1'  /etc/my.cnf
+systemctl start  mariadb.service
+root_password=helloworld
+(echo ""  
+sleep 1  
+echo "y"
+sleep 1  
+echo "$root_password"
+sleep 1  
+echo "$root_password"
+sleep 1  
+echo "n"
+sleep 1  
+echo "n"
+sleep 1  
+echo "n"
+sleep 1  
+echo "y"
+)|mysql_secure_installation 
+
+#GRANT PRIVILEGES 
+mysql -uroot  -p"$root_password" <<EOF  
+	grant all privileges on *.* to 'root'@'%' identified by 'root' with grant option;
+	use mysql;
+	update user set password=PASSWORD("$root_password") where user='root';
+	flush privileges;
+EOF
+systemctl enable  mariadb.service
+
+mv /etc/localtime /etc/localtime.bak
+ln -s /usr/share/zoneinfo/Asia/Shanghai  /etc/localtime
+```
+
