--- a/startlight/星光框架.md
+++ b/startlight/星光框架.md
@@ -1,3 +1,5 @@
+[TOC]
+
 
 
 
@@ -108,6 +110,33 @@ func (s Service) initService() {
 ```
 
 conf.InitConf()初始化了服务的ip和端口。接下来便执行额外的初始化操作。
+
+
+
+## 日志模块
+
+日志文件配置位置：/deployment/config/pro/log.yaml，类似如下：
+
+```yaml
+log_config:
+  port: "9200"
+es_config:
+  es_url: "http://10.127.48.35:9200"
+  es_user: "elastic"
+  es_passwd: "elastic"
+  es_index: "starlight-log"
+  es_flush: 5
+
+sys_config:
+  log_dir: "/var/tmp/"
+  max_size: 51200
+  max_backups: 3
+  max_age: 28
+```
+
+
+
+
 
 
 
