--- a/linux/常用服务搭建.md
+++ b/linux/常用服务搭建.md
@@ -65,3 +65,30 @@ mv /etc/localtime /etc/localtime.bak
 ln -s /usr/share/zoneinfo/Asia/Shanghai  /etc/localtime
 ```
 
+
+
+## Elasticsearch
+
+```shell
+# root执行
+# /etc/security/limits.conf后面追加一下配置
+*               soft    nofile          65536
+*               hard    nofile          65536
+
+*               soft    nproc           4096
+*               hard    nproc           4096
+sysctl -w vm.max_map_count=262144 
+
+adduser elasticsearch # 不能用root运行，先创建普通用户
+passwd elasticsearch
+su elasticsearch
+cd  # 在用户目录下操作
+wget https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-7.6.1-linux-x86_64.tar.gz
+tar zxvf elasticsearch-7.6.1-linux-x86_64.tar.gz
+cd elasticsearch-7.6.1/
+echo 'network.host: 0.0.0.0' >> config/elasticsearch.yml
+echo 'cluster.initial_master_nodes: ["node-1"]' >> config/elasticsearch.yml
+./bin/elasticsearch
+curl http://172.16.171.46:9200/
+```
+
