--- a/linux/常用服务搭建.md
+++ b/linux/常用服务搭建.md
@@ -70,6 +70,7 @@ ln -s /usr/share/zoneinfo/Asia/Shanghai  /etc/localtime
 ## Elasticsearch
 
 ```shell
+# CentOS76
 # root执行
 # /etc/security/limits.conf后面追加一下配置
 *               soft    nofile          65536
@@ -86,9 +87,24 @@ cd  # 在用户目录下操作
 wget https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-7.6.1-linux-x86_64.tar.gz
 tar zxvf elasticsearch-7.6.1-linux-x86_64.tar.gz
 cd elasticsearch-7.6.1/
-echo 'network.host: 0.0.0.0' >> config/elasticsearch.yml
+echo 'network.host: 0.0.0.0' >> config/elasticsearch.yml # 允许远程主机访问
 echo 'cluster.initial_master_nodes: ["node-1"]' >> config/elasticsearch.yml
 ./bin/elasticsearch
 curl http://172.16.171.46:9200/
+```
+
+
+
+## Kibana
+
+```shell
+# CentOS76
+# 和ES装在一起
+curl -L -O https://artifacts.elastic.co/downloads/kibana/kibana-7.6.1-linux-x86_64.tar.gz
+tar xzvf kibana-7.6.1-linux-x86_64.tar.gz
+cd kibana-7.6.1-linux-x86_64/
+echo 'server.host: 0.0.0.0' >> config/kibana.yml # 允许远程主机访问
+./bin/kibana
+
 ```
 
