--- a/linux/笔记.md
+++ b/linux/笔记.md
@@ -40,6 +40,15 @@ deb-src http://mirrors.tuna.tsinghua.edu.cn/ubuntu/ bionic-proposed main restric
 
 
 
+## Centos Yum源
+
+```shell
+wget -O CentOS-Base.repo http://mirrors.aliyun.com/repo/Centos-7.repo
+wget -O /etc/yum.repos.d/epel.repo http://mirrors.aliyun.com/repo/epel-7.repo
+```
+
+
+
 ## 内核参数
 
 ```shell
