--- a/starlight/ln15.md
+++ b/starlight/ln15.md
@@ -35,7 +35,7 @@ nscc@ln15:~/tmp$ dd if=1Gb.file bs=64k | dd of=/dev/null
 1024000000 bytes (1.0 GB, 977 MiB) copied, 2.96576 s, 345 MB/s
 
 nscc@ln15:~/tmp$ dd if=/dev/zero bs=32k count=1000000 of=32Gb.file
-^C记录了143034+0 的读入
+记录了143034+0 的读入
 记录了143034+0 的写出
 4686938112 bytes (4.7 GB, 4.4 GiB) copied, 41.9929 s, 112 MB/s
 
