--- a/starlight/星光框架.md
+++ b/starlight/星光框架.md
@@ -2,6 +2,80 @@
 
 
 
+## 服务构建
+
+在build.sh调用了make命令：
+
+```shell
+# make 参数
+make all APP=${APP} SL_ENV=${BUILD_ENV} SL_COMMIT=${GIT_COMMIT} SL_VERSION=v4.0-${GIT_COMMIT}
+# 其中，各个参数的含义如下：
+APP # 服务名。如：user,app等
+BUILD_ENV # dev:uat环境 pro:生产环境
+GIT_COMMIT # git commit的编号
+```
+
+makefile include了另外一个makefile，根据make命令传进来的参数，决定include的是uat环境的makefile(dev.makefile)还是生产环境的makefile(pro.makefile)，这个makefile里定义了很多变量。
+
+makefile构建过程（以构建uat环境的user服务为例，服务名通过上述的APP参数传进来）：
+
+```shell
+include ${SL_ENV}.makefile # 导入一些变量
+rm -rf build/user # 清除之前的构建结果
+mkdir -p build/user # 创建保存构建结果的目录
+# 把 conf-config-service configmap删掉
+kubectl --kubeconfig=config/cluster/dev/k8s_uat.config get configmap -n sl-dev | grep conf-config-service | awk '{print $1}' | xargs -l -r kubectl --kubeconfig=config/cluster/dev/k8s_uat.config delete configmap -n sl-dev 
+# 从文件中重新创建configmap
+kubectl --kubeconfig=config/cluster/dev/k8s_uat.config create configmap -n sl-dev conf-config-service --from-file=${SERVICE_CONFIG}
+        echo ${SL_VERSION} > $@
+        
+
+
+# 调用go build
+go build -v -ldflags "-X starlight/common/version.VERSION=v4.0-8a12164-0efde95" -o build/user/user.ms ../user.ms/server/server.go
+
+# 调用docker build
+docker build -t nscc-gz.cn/starlight-v4/user:v4.0-8a12164-0efde95 -f build/user/user.Dockerfile build/user
+
+# 推送镜像
+docker push nscc-gz.cn/starlight-v4/user:v4.0-8a12164-0efde95
+
+# 使用新镜像拉起服务
+kubectl --kubeconfig=config/cluster/dev/k8s_uat.config apply -f build/user/user.yaml
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 ## 从Service说起
