--- a/starlight/功能设计及文档/登录二次验证.md
+++ b/starlight/功能设计及文档/登录二次验证.md
@@ -16,7 +16,7 @@
 1. 使用不常用的IP地址登录的
 2. 使用密码登录失败尝试次数过多的（大于5次）
 3. 用户主动设置禁用密码登录的
-4. 距离上次登录成功时间过久的（大于3天）
+4. 距离上次登录成功时间过久的（大于7天）
 
 ## 如何实现二次验证
 
@@ -40,7 +40,7 @@
 
 
 
-#### verification_code
+#### shouji/email_verification_code
 
 ![image-20200421174443829](image/image-20200421174443829.png)
 
