--- a/starlight/功能设计及文档/获取星光验证码接口文档.md
+++ b/starlight/功能设计及文档/获取星光验证码接口文档.md
@@ -79,3 +79,11 @@ https://starlight.nscc-gz.cn/api/user/user_verify/get_verification_code?username
 
 可通过code来得知验证码是否发送成功，通过info来获取失败时的失败原因
 
+
+
+优先先发邮件
+
+发送短信失败就发邮件（有可能没有邮件） --- 用户
+
+验证码保存一段时间(前几次有效时间短一点，后几次时间长一点)
+
