--- a/doc/框架设计思想.md
+++ b/doc/框架设计思想.md
@@ -4,6 +4,8 @@
 
 [TOC]
 
+# 框架设计
+
 ### 路由设置
 
 每个请求url对应一个controller，默认根据相应的http方法执行controller的GET，POST，PUT等方法，如：
@@ -18,6 +20,16 @@ beego.Router("/admin", &admin.UserController{})
 beego.Router("/api/list",&RestController{},"*:ListFood")  # 匹配所有http方法
 beego.Router("/api/create",&RestController{},"post:CreateFood")  # 匹配POST方法
 ```
+
+静态文件的路由：
+
+```shell
+beego.SetStaticPath("/download","down")
+```
+
+
+
+
 
 ### 控制器
 
@@ -49,4 +61,13 @@ httpport = "${ProPort||9090}"
 ```shell
 StaticDir = download:down download2:down2 #相当于 beego.SetStaticPath("/download","down") 和 beego.SetStaticPath("/download2","down2")
 ```
+
+
+
+# 框架对比
+
+beego和星光框架设计的对比。
+
+1. 星光将请求映射到一个处理函数，而beego则是映射到一个Controller对象，处理逻辑放在Controller对象的方法里。
+2. beego提供了获取静态文件的路由支持，星光没有获取静态文件的方法，也没有可供用户获取的静态文件，即使是密钥这种信息，也是直接存到数据库里了。
 
