--- a/starlight/功能设计及文档/获取星光验证码接口文档.md
+++ b/starlight/功能设计及文档/获取星光验证码接口文档.md
@@ -2,7 +2,7 @@
 
 ## 简介
 
-通过该接口可向星光用户发送验证码，该验证码可用于用户登录时进行二次验证。如果用户同时绑定了手机和邮箱，则优先向用户发送手机验证码，否则向用户绑定的手机或邮箱发送验证码。
+通过该接口可向星光用户发送验证码，该验证码可用于用户登录时进行二次验证。如果用户同时绑定了手机和邮箱，则优先向用户发送邮箱验证码，否则向用户绑定的手机或邮箱发送验证码。邮箱验证码每3分钟只会返回同一个，手机验证码每天前6次每3分钟只会返回同一个，6次之后返回的验证码都是同一个。
 
 ## 接口详情
 
@@ -12,7 +12,22 @@
 https://starlight.nscc-gz.cn/api/user/user_verify/get_verification_code?username=[username]
 ```
 
-该接口使用HTTP GET请求，其中username参数可以为用户的系统用户名，也可以直接使用用户绑定的手机或邮箱
+该接口使用HTTP POST请求，其中username参数可以为用户的系统用户名，也可以直接使用用户绑定的手机或邮箱。
+
+请求数据：
+
+```shell
+{
+	"user_name": "starlight1_1",
+	"key": "SGVsbG9Xb3JsZDIwMjA="
+}
+```
+
+user_name：为系统用户名，或者绑定的手机号或邮箱
+
+key：为调用该接口需要提供的口令，该接口不是公用接口，仅允许持有口令的用户（如系统部）开放
+
+
 
 ### 响应结果
 
@@ -26,34 +41,58 @@ https://starlight.nscc-gz.cn/api/user/user_verify/get_verification_code?username
 
 ```shell
 {
-    "uuid": "29193c65-8334-434c-8bde-6d3fea9e3a1c",
+    "uuid": "ad45de95-eb60-4f16-881c-84a2d791bd0b",
     "code": 200,
     "info": "",
     "kind": "verification code",
     "total": 0,
     "spec": {
-        "verification_code": "523197",
+        "verification_code": "897293",
         "email": "",
-        "telephone": "137****1557"
+        "telephone": "155****6783",
+        "actually_send": true
     }
 }
 ```
 
-其中verification_code为向用户发送的验证码，telephone和email为二选一字段，向手机发送验证码时telephone字段表示收到验证码的手机号，为了安全，手机号码部分信息做了隐藏，用户本人可以根据这个信息去手机上查看验证码。
+verification_code：为向用户发送的验证码
+
+telephone/email：为二选一字段，向手机发送验证码时telephone字段表示收到验证码的手机号，为了安全，手机号码部分信息做了隐藏，用户本人可以根据这个信息去手机上查看验证码。
+
+actually_send：表示是否会真正向用户手机发送一条短信，true表示会，false表示只是从数据库中把上次发给用户的验证码拿出来复用(如下图所示)，每3分钟只会向用户手机发送一条短信，并且每天发送短信的数量是有限的，每天最多发送6条，6条以后验证码的actually_send都会为false。
+
+```shell
+{
+    "uuid": "99adcab4-aac7-4072-b26c-f416794ecd07",
+    "code": 200,
+    "info": "",
+    "kind": "verification code",
+    "total": 0,
+    "spec": {
+        "verification_code": "897293",
+        "email": "",
+        "telephone": "155****6783",
+        "actually_send": false
+    }
+}
+```
+
+
 
 同理，发送邮件验证码成功的响应类似如下：
 
 ```shell
 {
-    "uuid": "e263833d-e386-4662-aa2e-cb41e13a44dc",
+    "uuid": "bf26f251-bff2-44d8-a4d4-0486bfe07a07",
     "code": 200,
     "info": "",
     "kind": "verification code",
     "total": 0,
     "spec": {
-        "verification_code": "129993",
+        "verification_code": "104170",
         "email": "****85787@qq.com",
-        "telephone": ""
+        "telephone": "",
+        "actually_send": true
     }
 }
 ```
@@ -68,13 +107,13 @@ https://starlight.nscc-gz.cn/api/user/user_verify/get_verification_code?username
 
 ```shell
 {
-    "uuid": "af4e3892-7055-4985-9917-02da4ed23a76",
-    "code": 10471,
-    "info": "验证码发送太频繁",
+    "uuid": "7e4ca514-306d-4571-b9b5-2195dd038484",
+    "code": 1111,
+    "info": "您使用的IP地址在单位时间内调用api接口的次数已达到上限",
     "kind": "",
     "total": 0,
     "spec": null
-}
+}0
 ```
 
 可通过code来得知验证码是否发送成功，通过info来获取失败时的失败原因
