--- a/starlight/功能设计及文档/登录二次验证.md
+++ b/starlight/功能设计及文档/登录二次验证.md
@@ -4,10 +4,7 @@
 
 # 描述
 
-主要有两个方面的要点：
 
-1. 何时需要进行二次验证
-2. 如何实现二次验证
 
 ## 何时需要进行二次验证
 
@@ -15,7 +12,6 @@
 
 1. 使用不常用的IP地址登录的
 2. 使用密码登录失败尝试次数过多的（大于5次）
-3. 用户主动设置禁用密码登录的
 4. 距离上次登录成功时间过久的（大于7天）
 
 ## 如何实现二次验证
@@ -40,7 +36,7 @@
 
 
 
-#### shouji/email_verification_code
+#### email_verification_code / telephone_verification_code
 
 ![image-20200421174443829](image/image-20200421174443829.png)
 
@@ -87,7 +83,7 @@ telephone_verify
 #### SendVerificationCode
 
 ```go
-func SendVerificationCode(userName string, codeType int, isByEmail bool, target string) string, error
+func SendVerificationCode(userName string, isByEmail bool, target string) string, error
 ```
 
 参数说明：
