--- a/starlight/doc/前端框架.md
+++ b/starlight/doc/前端框架.md
@@ -12,13 +12,17 @@
 
 @/router/index.js ： 集中定义了前端的路由
 
+@/main.js : 程序入口
+
 
 
 ## @/router/index.js
 
-根据用户是否拥有相关权限显示导航栏,相关字段:
+根据用户是否拥有相关权限显示导航栏,vue-router的route相关字段:
 
 ```shell
+path # 必选，前端路由的路径
+component # 必选，该前端路由对应的组件
 alwaysShow # 一级菜单总是显示在左侧导航栏中
 perms # 该组件需要的权限
 hidden # 是否隐藏
@@ -26,7 +30,30 @@ hidden # 是否隐藏
 
 
 
+## @/main.js
 
+```javascript
+new Vue({
+  el: '#app',
+  router,
+  store,
+  i18n,
+  render: h => h(App)
+})
+
+// router一开始是包含了不需要权限检查的固定路由，如/redirect，/test，/recruit，/workflow，/login，/register，/forgot-password，/wx-login，/，/profile，/dchub，/datafile/view，/reset-pwd，/401，/404
+// 通过注入路由器，我们可以在任何组件内通过 this.$router 访问路由器，也可以通过 this.$route 访问当前路由
+```
+
+
+
+## @/store/modules/permission.js
+
+获取用户的权限，根据用户权限设置用户能访问的路由
+
+
+
+filterAsyncRoutes根据用户的权限，返回用户有权限展示的routes，该routes是@/router/index.js定义的路由的子集
 
 
 
