--- a/starlight/doc/前端框架.md
+++ b/starlight/doc/前端框架.md
@@ -43,13 +43,14 @@ new Vue({
 
 // router一开始是包含了不需要权限检查的固定路由，如/redirect，/test，/recruit，/workflow，/login，/register，/forgot-password，/wx-login，/，/profile，/dchub，/datafile/view，/reset-pwd，/401，/404
 // 通过注入路由器，我们可以在任何组件内通过 this.$router 访问路由器，也可以通过 this.$route 访问当前路由
+// store : Vuex.Store
 ```
 
 
 
 ## @/store/modules/permission.js
 
-获取用户的权限，根据用户权限设置用户能访问的路由
+获取用户的权限，根据用户权限设置用户能访问的路由(route，关联了对应的组件，所以没有权限的用户也看不到相应的组件)
 
 
 
