--- a/starlight/功能设计及文档/获取星光验证码接口文档.md
+++ b/starlight/功能设计及文档/获取星光验证码接口文档.md
@@ -11,20 +11,43 @@
 ### 请求url
 
 ```shell
-https://starlight.nscc-gz.cn/api/user/user_verify/get_internal_verification_code
+https://starlight-pre.nscc-gz.cn/api/user/user_verify/get_internal_verification_code
 ```
 
 该接口使用HTTP POST请求，其中username参数可以为用户的系统用户名，也可以直接使用用户绑定的手机或邮箱。
 
-请求数据：
+https://starlight-pre.nscc-gz.cn 是星光预发布环境的地址，生产环境请使用：https://starlight.nscc-gz.cn
+
+POST数据：
 
 ```shell
 {
-	"user_name": "starlight1_1"
+	"user_name": "your_username"
 }
 ```
 
 user_name：为系统用户名，或者绑定到星光账号的手机号或邮箱
+
+header数据：
+
+```shell
+Bihu-Token : [TOKEN]
+```
+
+Bihu-Token为登录星光时获取到的token，可通过POST请求调用接口https://starlight-pre.nscc-gz.cn/api/keystone/short_term_token/name得到，该接口的POST请求参数为：
+
+```shell
+{
+    "username": "your_username",
+    "password": "your_password"
+}
+```
+
+user_name：可为系统用户名，或者绑定到星光账号的手机号或邮箱
+
+password为对应账号的密码的base64编码。
+
+
 
 ### 响应结果
 
