--- a/programming/javascript/ecma2015.md
+++ b/programming/javascript/ecma2015.md
@@ -1,5 +1,220 @@
 
 
+[TOC]
 
 
-**European Computer Manufacturers Association** : ECMA是欧洲计算机厂商协会(European Computer Manufacturers Association)，一个管理众多标准的协会。
+
+European Computer Manufacturers Association** : ECMA是欧洲计算机厂商协会(European Computer Manufacturers Association)，一个管理众多标准的协会。
+
+ECMAScript 6,简称ES6,因为是2015年推出的标准，因此也叫ECMAScript 2015。
+
+ES6包含以下新特性：
+
+## Arrows-箭头函数
+
+箭头函数是一种函数缩写，使用`=>`语法。ES6的箭头函数支持代码块函数体和表达式函数体，表达式函数体会返回表达式的值，如下js代码：
+
+```javascript
+function executeFunc(func) {
+    let result = func()
+    console.log(result)
+}
+
+// 普通函数
+executeFunc(function () {
+    return 1
+})
+
+// 箭头函数-代码块函数体
+executeFunc(() => {
+    return 2
+})
+
+// 箭头函数-表达式函数体
+executeFunc(()=> 1+2)
+
+// 执行结果
+D:\workspace\idea\nodejs_demo>node app.js
+1
+2
+3
+```
+
+
+
+和普通函数不同的是，箭头函数的this指向的是外部的对象，而不是函数本身，如下js代码：
+
+```javascript
+var bob = {
+    _name: "Bob",
+    _friends: ['xiaoming','xiaohong'],
+    printFriends() {
+        this._friends.forEach(f =>
+            console.log(this._name + " knows " + f));
+    }
+}
+
+var tom = {
+    _name: "Tom",
+    _friends: ['xiaoming','xiaohong'],
+    printFriends() {
+        this._friends.forEach(function (f){
+            console.log(this._name + " knows " + f);
+        })
+    }
+}
+
+bob.printFriends()
+tom.printFriends()
+
+// 输出结果
+Bob knows xiaoming
+Bob knows xiaohong
+undefined knows xiaoming
+undefined knows xiaohong
+```
+
+在bob对象中，我们使用的是箭头函数，箭头函数中的this指向的是外部的对象，即bob本身，因此this._name的值为`Bob`
+
+在tom对象中，我们使用的是普通函数，普通函数中的this指向的是函数本身，因此this._name的值为`undefined`
+
+## 类
+
+相比起ES5中通过构造函数生成对象的方式，ES6引入了class的概念，提供了更接近传统语言的写法。clas支持继承、调用父类方法、静态方法和构造函数，如下：
+
+```javascript
+class Animal {
+    constructor(name) {  // 构造函数
+        this.name = name
+    }
+}
+
+class Cat extends  Animal {  // 继承Animal类
+    constructor(name,color) {
+        super(name);  // 调用父类构造函数
+        this.color = color
+    }
+
+    printObject(){   // 普通方法
+        console.log('my name is ' + this.name + ',my color is ' + this.color)
+    }
+
+    static printClass(){  // 静态方法
+        console.log('i am a cat')
+    }
+}
+
+Cat.printClass()
+let cat = new Cat('tom', 'white')
+cat.printObject()
+
+// output
+D:\workspace\idea\nodejs_demo>node app.js
+i am a cat
+my name is tom,my color is white
+```
+
+
+
+## 增强的对象字面量
+
+实际上就是提供了2个语法糖：
+
+1. 成员速写
+2. 方法速写
+3. 计算属性名
+
+更详细的介绍可参考：https://blog.csdn.net/function_zzc/article/details/104587779
+
+
+
+## 模板字符串
+
+提供了类似Python的字符串插值的特性，模板字符串使用反引号括起来，并支持多行字符串：
+
+```javascript
+let name = "Bob", time = "today";
+let greeting = `Hello ${name}, how are you ${time}?`  // 插值
+let multiline = `i am fine,   
+thanks`           // 多行字符串
+
+console.log(greeting)
+console.log(multiline)
+
+// output
+D:\workspace\idea\nodejs_demo>node app.js
+Hello Bob, how are you today?
+i am fine,
+thanks
+```
+
+更详细的介绍可参考：https://www.cnblogs.com/xiaowie/p/11601599.html
+
+
+
+## 解构(Destructuring)
+
+按照一定模式，从数组和对象中提取值，对变量进行赋值。
+
+更详细的介绍可参考：https://blog.csdn.net/weixin_43532346/article/details/84940609
+
+## 函数默认参数
+
+Defalut参数：
+
+```javascript
+function multiply(a, b = 1) {
+  return a * b;
+}
+
+console.log(multiply(5, 2)); // expected output: 10
+console.log(multiply(5)); // expected output: 5
+```
+
+
+
+## 函数Rest参数
+
+**Rest参数**语法允许我们将一个不定数量的参数表示为一个数组：
+
+```javascript
+function sum(...theArgs) {
+  return theArgs.reduce((previous, current) => {
+    return previous + current;
+  });
+}
+
+console.log(sum(1, 2, 3));// expected output: 6
+console.log(sum(1, 2, 3, 4));// expected output: 10
+
+```
+
+
+
+## 展开语法
+
+**展开语法(Spread syntax),** 可以在函数调用时, 将数组表达式在语法层面展开：
+
+```javascript
+function sum(x, y, z) {
+  return x + y + z;
+}
+
+const numbers = [1, 2, 3];
+
+console.log(sum(...numbers)); // expected output: 6
+```
+
+
+
+## Let/Const
+
+let声明的变量只在let命令所在的代码块内有效。const声明一个只读的常量，一旦声明，常量的值就不能改变。
+
+
+
+## 模块-export/import
+
+有两种export：1. 命名export 2. default export
+
+export :https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/export
