--- a/programming/javascript/ecma2015.md
+++ b/programming/javascript/ecma2015.md
@@ -222,3 +222,55 @@ export :https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statem
 
 
 ## Set/Map/WeakMap/WeakSet
+
+
+
+## Proxy
+
+在目标对象的外层搭建了一层拦截，外界对目标对象的某些操作，必须通过这层拦截。
+
+代理对象的创建：
+
+```javascript
+var proxy = new Proxy(target, handler);
+```
+
+13个代理方法：
+
+```javascript
+// 在读取代理对象的原型时触发该操作，比如在执行 Object.getPrototypeOf(proxy) 时。
+handler.getPrototypeOf()
+// 在设置代理对象的原型时触发该操作，比如在执行 Object.setPrototypeOf(proxy, null) 时。
+handler.setPrototypeOf()
+// 在判断一个代理对象是否是可扩展时触发该操作，比如在执行 Object.isExtensible(proxy) 时。
+handler.isExtensible()
+// 在让一个代理对象不可扩展时触发该操作，比如在执行 Object.preventExtensions(proxy) 时。
+handler.preventExtensions()
+// 在获取代理对象某个属性的属性描述时触发该操作，比如在执行 Object.getOwnPropertyDescriptor(proxy, "foo") 时。
+handler.getOwnPropertyDescriptor()
+// 在定义代理对象某个属性时的属性描述时触发该操作，比如在执行 Object.defineProperty(proxy, "foo", {}) 时。
+andler.defineProperty()
+// 在判断代理对象是否拥有某个属性时触发该操作，比如在执行 "foo" in proxy 时。
+handler.has()
+// 在读取代理对象的某个属性时触发该操作，比如在执行 proxy.foo 时。
+handler.get()
+// 在给代理对象的某个属性赋值时触发该操作，比如在执行 proxy.foo = 1 时。
+handler.set()
+// 在删除代理对象的某个属性时触发该操作，比如在执行 delete proxy.foo 时。
+handler.deleteProperty()
+// 在获取代理对象的所有属性键时触发该操作，比如在执行 Object.getOwnPropertyNames(proxy) 时。
+handler.ownKeys()
+// 在调用一个目标对象为函数的代理对象时触发该操作，比如在执行 proxy() 时。
+handler.apply()
+// 在给一个目标对象为构造函数的代理对象构造实例时触发该操作，比如在执行new proxy() 时。
+handler.construct()
+```
+
+
+
+更详细的介绍可参考：https://www.jianshu.com/p/c2a1aa2e2b14
+
+
+
+## Promises
+
