--- a/linux/常用服务搭建.md
+++ b/linux/常用服务搭建.md
@@ -108,3 +108,12 @@ echo 'server.host: 0.0.0.0' >> config/kibana.yml # 允许远程主机访问
 
 ```
 
+
+
+##  KVM
+
+```shell
+# ubuntu18.04
+apt install qemu qemu-kvm libvirt-bin bridge-utils virt-manager
+```
+
