--- a/starlight/功能设计及文档/工作流调度.md
+++ b/starlight/功能设计及文档/工作流调度.md
@@ -7,6 +7,7 @@ Job计费：
 1. Pod被中途删除，k8s会重新调度一个Pod，被删除的Pod已使用的资源会被记录下来
 2. Pod失败退出（exit code不为0，如用户程序出了error退出），Retry，达到Retry限制，Job失败，每次Retry创建一个Pod，所有的Pod都会计费
 3. Job运行超时后，Job状态会变成失败。不设置超时字段（<=0），则永不超时
-4. Docker 挂了，pending的Pod不会被迁走， 
-5. Docker挂了后，Running的Pod要等很久才会变成      running的Pod会被delete掉，但terminte要很久
-6. kubelet挂掉后，上面的Pod也是很久之后才改变状态
+4. Docker 挂了，pending的Pod不会被迁走，会一直在termining状态（不知道要等多久） 
+5. pod-eviction-timeout默认5分钟，如果node和api server失联了，上面的pod会一直运行，因为无法收到api server发给它的删除命令
+6. Docker挂了后，Running的Pod要等很久才会变成      running的Pod会被delete掉，但terminte要很久
+7. kubelet挂掉后，上面的Pod也是很久之后才改变状态
