--- a/others/interview/cloud/k8s2.md
+++ b/others/interview/cloud/k8s2.md
@@ -1,2 +1,35 @@
+## 云原生
+
+- Kubesphere: 多云管理，应用商店，按量付费 - 青云 - 8.9k
+- Rancher: 容器管理平台 - suse - 18.6k
+- Kubevela: 应用平台 - 阿里 - 3.3k
+- OpenKruise -增强的控制器 - 阿里(王思宇) - 3k
+  - 原地升级：不删除原有 Pod 直接升级容器镜像
+  - 高可用防护：防止级联删除，如 namespace 下还有 Pod 禁止删除
+  - 镜像预热：通过在节点上运行一个 daemon 来调用 CRI 接口，提前下载指定的镜像
+  - 容器重启：指定 Pod 中的一个或多个容器重启
+- Kubevirt: 同时管理 VM 和容器 - Redhat - 3k
+- OpenShift:  未开源？ - Redhat
+- Telepresence: 云原生开发 - 4.7k
+- Okteto: 云原生开发 - 2.1k
+
+
+
 `cat pre-install-cm.yaml.bak| kubectl apply -f -` 中的 - 有什么用
+
+
+
+不支持使用这些 field 进行 list: 
+
+```go
+	return c.Client.FieldSelector(
+		fields.AndSelectors(
+			fields.OneTermEqualSelector("spec.scaleTargetRef.apiVersion", typeMeta.APIVersion),
+			fields.OneTermEqualSelector("spec.scaleTargetRef.kind", typeMeta.Kind),
+			fields.OneTermEqualSelector("spec.scaleTargetRef.name", c.Name),
+		).String(),
+	).ListHPA()
+```
+
+
 
