--- a/K8S/源码解析.md
+++ b/K8S/源码解析.md
@@ -1,5 +1,7 @@
 
 
+[TOC]
+
 # 基础
 
 ## Verbs 资源操作方法
@@ -32,3 +34,10 @@
 - pkg/apis/apps/v1 : apps 资源组 v1 资源版本的源码目录
 - pkg/apis/apps/v1/register.go : 定义该资源目录所属的资源组和资源版本
 - pkg/apis/apps/v1/defaults.go : 定义了资源的默认值函数
+
+
+
+# client-go
+
+- 一个 RESTClient 可以访问某个指定资源组的资源，调用其 Get 方法会得到一个 Request（调用多次会得到多个）
+
